Fixed JSON writing, added remove functionality and re-implemented fade in ticker

--- a/BlackWinformsTest/BlackWinformsTest.csproj
+++ b/BlackWinformsTest/BlackWinformsTest.csproj
@@ -117,6 +117,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="MetroFramework.txt" />
+    <None Include="Resources\RemoveGridLayout2.png" />
+    <None Include="Resources\RemoveGridLayout.png" />
     <None Include="Resources\GridLayout5.png" />
     <None Include="Resources\GridLayout4.png" />
     <None Include="Resources\GridLayout3.png" />
